--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-create.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-create.html
@@ -31,6 +31,12 @@
                         </div>
                     </div>
                     <div class="flex-container search-padding">
+                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.jobClass')}"></span></b></div>
+                        <div class="flex-item-7">
+                            <input class="search-input" type="text" maxlength="10" size="10" />
+                        </div>
+                    </div>
+                    <div class="flex-container search-padding">
                         <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.cronexpression')}"></span></b></div>
                         <div class="flex-item-7">
                             <input class="search-input" type="text" maxlength="10" size="10" />
@@ -40,40 +46,6 @@
                         <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.datamap')}"></span></b></div>
                         <div class="flex-item-7">
                             <input class="search-input" type="text" maxlength="10" size="10" />
-                        </div>
-                    </div>
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.laststatus')}"></span></b></div>
-                        <div class="flex-item-7">
-                            <select>
-                                <option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.select.success')}"></span></option>
-                                <option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.select.failed')}"></span></option>
-                                <option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.select.running')}"></span></option>
-                            </select>
-                        </div>
-                    </div>
-
-
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.lastExecutionTime')}"></span></b></div>
-                        <div class="flex-item-7">
-                            <input class="search-input-time" type="text" maxlength="10" size="10" />
-                            <span class="search-time-padding">(dd/mm/yyyy)</span>
-                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
-                            <span> : </span>
-                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
-                            <span>(hh:mm)</span>
-                        </div>
-                    </div>
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.nextExecutionTime')}"></span></b></div>
-                        <div class="flex-item-7">
-                            <input class="search-input-time" type="text" maxlength="10" size="10" />
-                            <span class="search-time-padding">(dd/mm/yyyy)</span>
-                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
-                            <span> : </span>
-                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
-                            <span>(hh:mm)</span>
                         </div>
                     </div>
 
