DB: Added Table for Schedule Job ADD: Job Schedule View History Search API

--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-create.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-create.html
@@ -59,7 +59,7 @@
                         </a>
                         &nbsp;
                         <a class="DisableLinkUnderline" th:href="@{/e-Services-2/maintenance/scheduleJob.do}">
-                            <input class="ButtonStyle button pointer" type="text" th:value="${#messages.msg('umps.adminfunc.common.cancel')}" />
+                            <input class="ButtonStyle button pointer" type="button" th:value="${#messages.msg('umps.adminfunc.common.cancel')}" />
                         </a>
                     </div>
                 </div>
