--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-search.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-search.html
@@ -25,7 +25,7 @@
                     </div>
                     <div>
                         <a th:href="@{/e-Services-2/maintenance/scheduleJob_Create.do}">
-                            <input class="ButtonStyle button pointer" type="text" th:value="${#messages.msg('umps.adminfunc.schedulejob.createJob')}" />
+                            <input class="ButtonStyle button pointer" type="button" th:value="${#messages.msg('umps.adminfunc.schedulejob.createJob')}" />
                         </a>
                     </div>
                 </div>
