--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-view-result.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-view-result.html
@@ -257,7 +257,7 @@
                     <div style="flex: auto;"></div>
                     <div style="padding: 15px;">
                         <a class="DisableLinkUnderline" th:href="@{/e-Services-2/enquiry/scheduleJobView.do}">
-                            <input class="ButtonStyle back-button pointer" type="text" th:value="${#messages.msg('umps.adminfunc.common.backToSearchCriteria')}" />
+                            <input class="ButtonStyle back-button pointer" type="button" th:value="${#messages.msg('umps.adminfunc.common.backToSearchCriteria')}" />
                         </a>
                     </div>
                 </div>
