MOD: search Schedule Job View History by date

--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-result.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-result.html
@@ -129,7 +129,7 @@
             });
 
             //
-            generateSelectOptionByValue(totalPager, totalPageList);
+            generateSelectOptionByValue(totalPager, totalPageList, false);
 
             var numSize = getGridPageNumSize(recordPerPage, list.length);
             generateSelectOptionBySequence(numPager, numSize, GRID_TABLE_OFFSET);
