--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-view-history-result.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-view-history-result.html
@@ -6,86 +6,68 @@
 
     <link rel="stylesheet" href="/adminfunc/css/schedule-job.css"/>
 
-    <script th:inline="javascript">
+    <script th:inline="javascript" th:if="${scheduleJobViewHistoryDTO}" >
         /*<![CDATA[*/
 
         $(function () {
             var list = [];
 
-            list = [
-                {
-                    'jobName': 'Job Name 1',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 2',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 3',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 4',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 5',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 6',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 7',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 8',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 9',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 10',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 11',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
-                },
-                {
-                    'jobName': 'Job Name 12',
-                    'status': 'Success',
-                    'startTime': '24/09/2018 10:00',
-                    'endTime': '24/09/2018 12:00'
+            var scheduleJobViewHistoryDTO = [[${scheduleJobViewHistoryDTO}]];
+
+            if (isNotEmptyNullUndfined(scheduleJobViewHistoryDTO)) {
+                var jobName = scheduleJobViewHistoryDTO['jobName'];
+                var jobStatus = scheduleJobViewHistoryDTO['status'];
+
+                var startDate = scheduleJobViewHistoryDTO['startDate'];
+                var endDate = scheduleJobViewHistoryDTO['endDate'];
+
+                var historyList = scheduleJobViewHistoryDTO['scheduleJobViewHistoryList'];
+
+                if (isNotEmptyNullUndfined(historyList) && historyList.length > 0) {
+                    jQuery.each(historyList, function (index, object) {
+                        var name = object['jobName'];
+                        var status = object['status'];
+                        var fromDate = new Date(object['startTime']);
+                        var toDate = new Date(object['endTime']);
+                        var fromDateFormatted =  moment(fromDate).format(TABLE_DATE_FORMAT);
+                        var toDateFormatted = moment(toDate).format(TABLE_DATE_FORMAT);
+
+                        var newObj = {
+                            'startTime': fromDateFormatted,
+                            'endTime': toDateFormatted,
+                            'jobName': name,
+                            'status': status
+                        };
+
+                        list.push(newObj);
+                    });
                 }
-            ];
+
+                if (isNotEmptyNullUndfined(jobName)) {
+                    var jobNameDom = $('#jobName');
+                    jobNameDom.html(jobName);
+                }
+                if (isNotEmptyNullUndfined(jobStatus)) {
+                    var jobStatusDom = $('#jobStatus');
+                    jobStatusDom.html(jobStatus);
+                }
+                if (isNotEmptyNullUndfined(startDate)) {
+                    var startDateDom = $('#startDate');
+
+                    var tmpStartDate = new Date(startDate);
+                    var startDateFormatted = moment(tmpStartDate).format(TABLE_DATE_FORMAT);
+
+                    startDateDom.html(startDateFormatted);
+                }
+                if (isNotEmptyNullUndfined(endDate)) {
+                    var endDateDom = $('#endDate');
+
+                    var tmpEndDate = new Date(endDate);
+                    var endDateFormatted = moment(tmpEndDate).format(TABLE_DATE_FORMAT);
+
+                    endDateDom.html(endDateFormatted);
+                }
+            }
 
             // table grid data
             var totalPageList = GRID_RECORD_PER_PAGE_ARRAY_DEFAULT;
@@ -112,7 +94,7 @@
             });
 
             //
-            generateSelectOptionByValue(totalPager, totalPageList);
+            generateSelectOptionByValue(totalPager, totalPageList, false);
 
             var numSize = getGridPageNumSize(recordPerPage, list.length);
             generateSelectOptionBySequence(numPager, numSize, GRID_TABLE_OFFSET);
@@ -144,8 +126,8 @@
                 },
 
                 fields: [
-                    { name: 'jobName', title: 'Job Name', type: 'text', width: 40, headerTemplate: commonHeader },
-                    { name: 'status', title: 'Status', type: 'text', width: 40, headerTemplate: commonHeader },
+                    { name: 'jobName', title: 'Job Name', type: 'text', width: 20, headerTemplate: commonHeader },
+                    { name: 'status', title: 'Status', type: 'text', width: 10, headerTemplate: commonHeader },
                     { name: 'startTime', title: 'Start Time', type: 'text', width: 30, headerTemplate: commonHeader },
                     { name: 'endTime', title: 'End Time', type: 'text', width: 30, headerTemplate: commonHeader }
                 ]
@@ -175,28 +157,28 @@
                     <div class="flex-container">
                         <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.jobname')}"></span></b></div>
                         <div class="flex-item-7 search-result-right">
-                            <span>Job Name A</span>
+                            <span id="jobName"></span>
                         </div>
                     </div>
                     <div class="RowSeparatorThin"></div>
                     <div class="flex-container">
                         <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.status')}"></span></b></div>
                         <div class="flex-item-7 search-result-right">
-                            <span>Success</span>
+                            <span id="jobStatus"></span>
                         </div>
                     </div>
                     <div class="RowSeparatorThin"></div>
                     <div class="flex-container">
                         <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.startTime')}"></span></b></div>
                         <div class="flex-item-7 search-result-right">
-                            <span>24/09/2018 10:00</span>
+                            <span id="startDate"></span>
                         </div>
                     </div>
                     <div class="RowSeparatorThin"></div>
                     <div class="flex-container">
                         <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.endTime')}"></span></b></div>
                         <div class="flex-item-7 search-result-right">
-                            <span>24/09/2018 12:00</span>
+                            <span id="endDate"></span>
                         </div>
                     </div>
                     <!--<div class="RowSeparatorThin"></div>-->
