--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-view-history-search.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-view-history-search.html
@@ -6,8 +6,151 @@
 
     <link rel="stylesheet" href="/adminfunc/css/schedule-job.css"/>
 
-    <script type="text/javascript">
+    <script th:inline="javascript" th:if="${scheduleJobDetailDTO}">
+        /*<![CDATA[*/
 
+        $(document).ready(function () {
+            // var jobList = [];
+            // var statusList = [];
+
+            var scheduleJobDetailDTO = [[${scheduleJobDetailDTO}]];
+            console.log('scheduleJobDetailDTO');
+            console.log(scheduleJobDetailDTO);
+
+            if (isNotEmptyNullUndfined(scheduleJobDetailDTO)) {
+                var tmpJobList = scheduleJobDetailDTO['jobDetailList'];
+                var jobStatusList = scheduleJobDetailDTO['statusList'];
+
+                if (isNotEmptyNullUndfined(tmpJobList) && tmpJobList.length > 0) {
+                    var jobListDom =jQuery('#jobList');
+
+                    var list = [];
+                    jQuery.each(tmpJobList, function (index, object) {
+                        var jobName = object['jobName'];
+
+                        list.push(jobName);
+                    });
+                    generateSelectOptionByValue(jobListDom, list, false);
+
+                }
+
+                if (isNotEmptyNullUndfined(statusList) && statusList.length > 0) {
+                    var statusListDom =jQuery('#statusList');
+
+                    var list = [];
+                    jQuery.each(jobStatusList, function (index, object) {
+                        var name = object['name'];
+
+                        list.push(name);
+                    });
+                    generateSelectOptionByValue(statusListDom, list, true);
+                }
+            }
+
+            var shouldIncludeSearchDateField = false;
+
+            // var startDateDom = jQuery('#startDate');
+            // var endDateDom = jQuery('#endDate');
+
+            var startTimeDom = jQuery('#startTime');
+            var startHourDom = jQuery('#startHour');
+            var startMinDom = jQuery('#startMin');
+
+            var endTimeDom = jQuery('#endTime');
+            var endHourDom = jQuery('#endHour');
+            var endMinDom = jQuery('#endMin');
+
+            var submitBtnDom = jQuery('#submitBtn');
+            submitBtnDom.on('click', function () {
+                console.log('submitBtnDom');
+
+
+                var form =jQuery('#submitForm');
+
+                // if (shouldIncludeSearchDateField) {
+                //     var tmpStartDate = getDateFromInput(startTimeDom.val(), startHourDom.val(), startMinDom.val());
+                //     if (!isNotEmptyNullUndfined(tmpStartDate)) {
+                //         alert('Invalid start date format');
+                //         return;
+                //     }
+                //
+                //     var tmpEndDate = getDateFromInput(endTimeDom.val(), endHourDom.val(), endMinDom.val());
+                //     if (!isNotEmptyNullUndfined(tmpEndDate)) {
+                //         alert('Invalid end date format');
+                //         return;
+                //     }
+                //
+                //     jQuery('#startDate').attr('name', tmpStartDate);
+                //     jQuery('#endDate').attr('name', '11/11/1999');
+                //
+                // }
+
+                var today = new Date();
+                // jQuery('#startDate').attr('name', moment(new Date()).format(UI_DATE_FORMAT));
+                // jQuery('#endDate').attr('name', moment(today).format(UI_DATE_FORMAT));
+                // document.getElementById('endDate').name = new Date();
+
+                console.log(form);
+                // console.log(jQuery('#startDate'));
+                // console.log(jQuery('#endDate'));
+
+
+                form.submit();
+
+
+            });
+
+            startTimeDom.on('change paste keyup', function () {
+                var val = $(this).val();
+
+                if (val != '') {
+                    shouldIncludeSearchDateField = true;
+                }
+            });
+
+            startHourDom.on('change paste keyup', function () {
+                var val = $(this).val();
+
+                if (isHour(val) && val != '') {
+                    shouldIncludeSearchDateField = true;
+                }
+            });
+
+            startMinDom.on('change paste keyup', function () {
+                var val = $(this).val();
+
+                if (isMinute(val) && val != '') {
+                    shouldIncludeSearchDateField = true;
+                }
+            });
+
+            endTimeDom.on('change paste keyup', function () {
+                var val = $(this).val();
+
+                if (val != '') {
+                    shouldIncludeSearchDateField = true;
+                }
+            });
+
+            endHourDom.on('change paste keyup', function () {
+                var val = $(this).val();
+
+                if (isHour(val) && val != '') {
+                    shouldIncludeSearchDateField = true;
+                }
+            });
+
+            endMinDom.on('change paste keyup', function () {
+                var val = $(this).val();
+
+                if (isMinute(val) && val != '') {
+                    shouldIncludeSearchDateField = true;
+                }
+            });
+
+        });
+
+        /*]]>*/
     </script>
 
 </head>
@@ -19,72 +162,78 @@
     <div layout:fragment="content">
         <div class="content-padding">
             <div>
-                <div>
-                    <b><span th:text="${#messages.msg('umps.adminfunc.common.searchCriteria')}"></span></b>
-                </div>
-                <div >
-                    <div class="RowSeparatorThin"></div>
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.jobname')}"></span></b></div>
-                        <div class="flex-item-7">
-                            <select>
-                                <option value=""><span>JobNameA</span></option>
-                                <option value=""><span>JobNameB</span></option>
-                                <option value=""><span>JobNameC</span></option>
-                            </select>
-                        </div>
+                <form id="submitForm" th:action="@{/e-Services-2/enquiry/scheduleJobViewHistory_Search.do}" method="post" >
+                    <div>
+                        <b><span th:text="${#messages.msg('umps.adminfunc.common.searchCriteria')}"></span></b>
                     </div>
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.status')}"></span></b></div>
-                        <div class="flex-item-7">
-                            <select>
-                                <option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.select.success')}"></span></option>
-                                <option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.select.failed')}"></span></option>
-                                <option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.select.running')}"></span></option>
-                            </select>
+                    <div >
+                        <div class="RowSeparatorThin"></div>
+                        <div class="flex-container search-padding">
+                            <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.jobname')}"></span></b></div>
+                            <div class="flex-item-7">
+                                <select id="jobList" name="jobName">
+                                    <!--<option value=""><span>JobNameA</span></option>-->
+                                    <!--<option value=""><span>JobNameB</span></option>-->
+                                    <!--<option value=""><span>JobNameC</span></option>-->
+                                </select>
+                            </div>
                         </div>
-                    </div>
+                        <div class="flex-container search-padding">
+                            <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.status')}"></span></b></div>
+                            <div class="flex-item-7">
+                                <select id="statusList" name="status">
+                                    <option value=""></option>
+                                    <!--<option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.select.success')}"></span></option>-->
+                                    <!--<option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.select.failed')}"></span></option>-->
+                                    <!--<option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.select.running')}"></span></option>-->
+                                </select>
+                            </div>
+                        </div>
 
 
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left">
-                            <input type="radio" name="time" />
-                            <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.startTime')}"></span></b>
+                        <div class="flex-container search-padding">
+                            <div class="flex-item-2 search-field-left">
+                                <!--<input type="radio" name="time" />-->
+                                <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.startTime')}"></span></b>
+                            </div>
+                            <div class="flex-item-7">
+                                <!--<input type="hidden" id="startDate" name="startDate" />-->
+                                <input class="search-input-time" id="startTime" name="startTime" type="text" maxlength="10" size="10" />
+                                <span class="search-time-padding">(dd/mm/yyyy)</span>
+                                <input class="search-input-minute" id="startHour" name="startHour" type="text" maxlength="2" size="2" />
+                                <span> : </span>
+                                <input class="search-input-minute" id="startMin" name="startMinute" type="text" maxlength="2" size="2" />
+                                <span>(hh:mm)</span>
+                            </div>
                         </div>
-                        <div class="flex-item-7">
-                            <input class="search-input-time" type="text" maxlength="10" size="10" />
-                            <span class="search-time-padding">(dd/mm/yyyy)</span>
-                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
-                            <span> : </span>
-                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
-                            <span>(hh:mm)</span>
+                        <div class="flex-container search-padding">
+                            <div class="flex-item-2 search-field-left">
+                                <!--<input type="radio" name="time" />-->
+                                <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.endTime')}"></span></b>
+                            </div>
+                            <div class="flex-item-7">
+                                <!--<input type="hidden" id="endDate" name="endDate" />-->
+                                <input class="search-input-time" id="endTime" name="endTime" type="text" maxlength="10" size="10" />
+                                <span class="search-time-padding">(dd/mm/yyyy)</span>
+                                <input class="search-input-minute" id="endHour" name="endHour" type="text" maxlength="2" size="2" />
+                                <span> : </span>
+                                <input class="search-input-minute" id="endMin" name="endMinute" type="text" maxlength="2" size="2" />
+                                <span>(hh:mm)</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left">
-                            <input type="radio" name="time" />
-                            <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.endTime')}"></span></b>
-                        </div>
-                        <div class="flex-item-7">
-                            <input class="search-input-time" type="text" maxlength="10" size="10" />
-                            <span class="search-time-padding">(dd/mm/yyyy)</span>
-                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
-                            <span> : </span>
-                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
-                            <span>(hh:mm)</span>
-                        </div>
-                    </div>
 
-                    <div class="RowSeparatorThin"></div>
-                </div>
-                <div class="flex-container" style="padding-top: 30px;">
-                    <div style="flex: auto;"></div>
-                    <div style="padding: 15px;">
-                        <a th:href="@{/e-Services-2/enquiry/scheduleJobViewHistory_Result.do}">
-                            <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="submit" th:value="${#messages.msg('umps.adminfunc.common.search')}" />
-                        </a>
+                        <div class="RowSeparatorThin"></div>
                     </div>
-                </div>
+                    <div class="flex-container" style="padding-top: 30px;">
+                        <div style="flex: auto;"></div>
+                        <div style="padding: 15px;">
+                            <!--<a th:href="@{/e-Services-2/enquiry/scheduleJobViewHistory_Result.do}">-->
+                                <!--<input class="SmallButtonStyle pointer" style="min-width: 80px;" type="submit" th:value="${#messages.msg('umps.adminfunc.common.search')}" />-->
+                            <input class="SmallButtonStyle pointer" id="submitBtn" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.search')}" />
+                            <!--</a>-->
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
