DB: UM_PRICE_BOOK, V_UM_PRICE_PAYMENT MOD: Application Fee Enquiry API and Integration

--- a/src/main/resources/templates/eServices2/AccessControl/access-control.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"></meta>
     <title>e-Services Admin Function</title>
 
-    <script type="text/javascript" th:inline="javascript" th:if="${accessControlDTO}">
+    <script th:inline="javascript" th:if="${accessControlDTO}">
         /*<![CDATA[*/
 
         $(document).ready(function () {
